// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dialog > add dialog and show 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 5,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 4,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 3,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n    \\",
                    \\"id\\": 7,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"dialog\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"I'm a dialog\\",
                        \\"id\\": 9,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 8,
                    \\"selector\\": \\"v1.0: body :: dialog#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": true
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n  \\\\n\\\\n\\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 6,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 2,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"compatMode\\": \\"BackCompat\\",
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 2,
      \\"type\\": 5,
      \\"id\\": -1
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 6,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"dialog\\",
            \\"attributes\\": {
              \\"open\\": \\"\\",
              \\"rr_open_mode\\": \\"non-modal\\"
            },
            \\"childNodes\\": [],
            \\"id\\": 11,
            \\"selector\\": \\"v1.0: body :: dialog#2\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": true
          }
        }
      ]
    },
    \\"checkoutId\\": 1
  }
]"
`;

exports[`dialog > add dialog and showModal 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 5,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 4,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 3,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n    \\",
                    \\"id\\": 7,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"dialog\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"I'm a dialog\\",
                        \\"id\\": 9,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 8,
                    \\"selector\\": \\"v1.0: body :: dialog#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": true
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n  \\\\n\\\\n\\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 6,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 2,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"compatMode\\": \\"BackCompat\\",
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 2,
      \\"type\\": 5,
      \\"id\\": -1
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 6,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"dialog\\",
            \\"attributes\\": {
              \\"open\\": \\"\\",
              \\"rr_open_mode\\": \\"modal\\"
            },
            \\"childNodes\\": [],
            \\"id\\": 11,
            \\"selector\\": \\"v1.0: body :: dialog#2\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": true
          }
        }
      ]
    },
    \\"checkoutId\\": 1
  }
]"
`;

exports[`dialog > switch to show dialog 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 5,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 4,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 3,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n    \\",
                    \\"id\\": 7,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"dialog\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"I'm a dialog\\",
                        \\"id\\": 9,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 8,
                    \\"selector\\": \\"v1.0: body :: dialog#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": true
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n  \\\\n\\\\n\\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 6,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 2,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"compatMode\\": \\"BackCompat\\",
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 2,
      \\"type\\": 5,
      \\"id\\": 8
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [
        {
          \\"id\\": 8,
          \\"attributes\\": {
            \\"open\\": \\"\\",
            \\"rr_open_mode\\": \\"modal\\"
          },
          \\"selector\\": \\"v1.0: body :: dialog#1\\"
        }
      ],
      \\"removes\\": [],
      \\"adds\\": []
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [
        {
          \\"id\\": 8,
          \\"attributes\\": {
            \\"open\\": \\"\\",
            \\"rr_open_mode\\": \\"non-modal\\"
          },
          \\"selector\\": \\"v1.0: body :: dialog#1\\"
        }
      ],
      \\"removes\\": [],
      \\"adds\\": []
    },
    \\"checkoutId\\": 1
  }
]"
`;

exports[`dialog > switch to showModal dialog 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 5,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 4,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 3,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n    \\",
                    \\"id\\": 7,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"dialog\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"I'm a dialog\\",
                        \\"id\\": 9,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 8,
                    \\"selector\\": \\"v1.0: body :: dialog#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": true
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n  \\\\n\\\\n\\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 6,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 2,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"compatMode\\": \\"BackCompat\\",
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 2,
      \\"type\\": 5,
      \\"id\\": 8
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [
        {
          \\"id\\": 8,
          \\"attributes\\": {
            \\"open\\": \\"\\",
            \\"rr_open_mode\\": \\"non-modal\\"
          },
          \\"selector\\": \\"v1.0: body :: dialog#1\\"
        }
      ],
      \\"removes\\": [],
      \\"adds\\": []
    },
    \\"checkoutId\\": 1
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [
        {
          \\"id\\": 8,
          \\"attributes\\": {
            \\"open\\": \\"\\",
            \\"rr_open_mode\\": \\"modal\\"
          },
          \\"selector\\": \\"v1.0: body :: dialog#1\\"
        }
      ],
      \\"removes\\": [],
      \\"adds\\": []
    },
    \\"checkoutId\\": 1
  }
]"
`;
